--- a/config/server.conf
+++ b/config/server.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name app.gitscrum.dev;
+	server_name gitscrum.cuihanwen.com;
 	
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
